@@ -1191,6 +1191,10 @@
     "Pizza Tower": {
         "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/other/pizzatower/betterrunner.html&html=1",
         "img": "pizzatower.jpg"
+    },
+    "(FORUM) No Name Games Forum": {
+        "url": "",
+        "img": "speech.png"
     }
   },
   "categories": {
